--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "my-business-card",
-  "private": true,
+  "name": "darts-web-app",
   "version": "1.0.0",
+  "private": true,
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -9,11 +9,11 @@
   },
   "dependencies": {
     "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "lucide-react": "^0.344.0",
-    "html2canvas": "^1.4.1"
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
-    "vite": "^5.0.0"
+    "vite": "^5.4.0",
+    "@vitejs/plugin-react": "^4.3.1"
   }
 }
+
